[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/UpperWall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/LowerWall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/EnemyPaddle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/EnemyScore.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/PlayerScore.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/MinionGame.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=9]
[ext_resource path="res://music/officialGameMusic/MinonBossSong.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Boss Background.tscn" type="PackedScene" id=11]

[node name="MinionGame" type="Node"]
script = ExtResource( 8 )

[node name="Boss Background" parent="." instance=ExtResource( 11 )]

[node name="Paddle" parent="." instance=ExtResource( 3 )]

[node name="Ball" parent="." instance=ExtResource( 2 )]

[node name="UpperWall" parent="." instance=ExtResource( 1 )]

[node name="LowerWall" parent="." instance=ExtResource( 4 )]

[node name="EnemyPaddle" parent="." instance=ExtResource( 5 )]

[node name="PlayerScore" parent="." instance=ExtResource( 7 )]

[node name="EnemyScore" parent="." instance=ExtResource( 6 )]

[node name="MinionTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Pause" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="hit_minion" from="Ball" to="." method="_on_Ball_hit_minion"]
[connection signal="timeout" from="MinionTimer" to="." method="_on_MinionTimer_timeout"]
